--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="../static/img/feather.svg" type="image/png">
+    <link rel="shortcut icon" href="/img/feather.svg" type="image/png">
     <title>Contoso</title>
     <link type="text/css" rel="stylesheet" href="../static/css/common.css" th:href="@{/css/common.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/login.css" th:href="@{/css/login.css}"/>
 </head>
 <body>
-<h1 class="greeting">Добро пожаловать в CONTOSO <img src="../static/img/feather.svg"></ing></h1>
+<h1 class="greeting">Добро пожаловать в CONTOSO <img src="/img/feather.svg"></ing></h1>
 <div class="login_form">
-
     <p class="authorization">Авторизация</p>
     <form action="/login" method="post">
         <div class="data">
