--- a/src/main/resources/templates/dispatcher.html
+++ b/src/main/resources/templates/dispatcher.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="shortcut icon" href="../static/img/feather.svg" type="image/png">
+  <link rel="shortcut icon" href="/img/feather.svg" type="image/png">
   <title>Contoso</title>
   <link type="text/css" rel="stylesheet" href="../static/css/common.css" th:href="@{/css/common.css}"/>
   <link type="text/css" rel="stylesheet" href="../static/css/admin.css" th:href="@{/css/admin.css}"/>
@@ -37,6 +37,7 @@
         <td th:text="${order.status}"></td>
         <td th:text="${order.orderDate}"></td>
         <td th:text="${order.desiredDate}"></td>
+        <td th:text="${order.totalHours} + ':' + ${order.totalMinutes}"></td>
       </tr>
     </div>
   </table>
