--- a/src/main/resources/templates/packing_workshop.html
+++ b/src/main/resources/templates/packing_workshop.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="shortcut icon" href="../static/img/feather.svg" type="image/png">
+  <link rel="shortcut icon" href="/img/feather.svg" type="image/png">
   <title>Contoso</title>
   <link type="text/css" rel="stylesheet" href="../static/css/common.css" th:href="@{/css/common.css}"/>
   <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
