fix: add material, create order at warehouse

--- a/src/main/resources/templates/add_material.html
+++ b/src/main/resources/templates/add_material.html
@@ -17,7 +17,7 @@
         <p>Введите название материала:</p>
         <input type="text" th:field="*{name}">
         <p>Мера измерения:</p>
-        <select th:field="*{unit}" name="unit" class="unit">
+        <select th:field="*{unit}" class="unit">
             <option th:value="'кг'">кг</option>
             <option th:value="'л'">л</option>
             <option th:value="'м^3'">м^3</option>
