--- a/src/main/resources/templates/add_material.html
+++ b/src/main/resources/templates/add_material.html
@@ -24,7 +24,7 @@
             <option th:value="'штуки'">штуки</option>
         </select>
         <p>Количество на складе:</p>
-        <input type="number" min="0" step="0.1" th:field="*{stockQuantity}">
+        <input type="number" class="stock_quantity" min="0" step="0.1" th:field="*{stockQuantity}">
     </div>
     <input class="btn" type="submit" value="Сохранить"/>
 </form>
