--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
             <input name="username" placeholder="email" required>
             <input name="password" placeholder="password" required>
         </div>
-        <input class="btn" type="submit" value="Войти">
+        <input class="login_btn" type="submit" value="Войти">
     </form>
 </div>
 </body>
