--- a/src/main/resources/templates/packing_workshop.html
+++ b/src/main/resources/templates/packing_workshop.html
@@ -16,7 +16,7 @@
 <body>
 <header th:insert="blocks/header::header"></header>
 <div class="search">
-  <form action="/packing" method="post">
+  <form action="/packing/search" method="get">
     <p><input type="search" name="id" placeholder="Что вы ищите?" class="search__form">
       <input type="submit" value="" class="search_button">
     </p>
