--- a/src/main/resources/templates/add_operation.html
+++ b/src/main/resources/templates/add_operation.html
@@ -21,7 +21,7 @@
             <option value="Упаковочный цех">Упаковочный цех</option>
         </select>
         <p>Введите название операции</p>
-        <input type="text" th:field="*{name}" placeholder="Название операции" required><br/>
+        <input type="text" th:field="*{name}" required><br/>
         <p>Время выполнения операции</p>
         <div class="time_container">
             <p class="time"><input type="number" min="0" th:field="*{hours}" value="0" required>ч. </p>
