--- a/src/main/resources/templates/assembly_workshop.html
+++ b/src/main/resources/templates/assembly_workshop.html
@@ -16,7 +16,7 @@
 <body>
 <header th:insert="blocks/header::header"></header>
 <div class="search">
-    <form action="/assembly" method="post">
+    <form action="/assembly/search" method="get">
         <p><input type="search" name="id" placeholder="Что вы ищите?" class="search__form">
             <input type="submit" value="" class="search_button">
         </p>
