--- a/src/main/resources/templates/order-p.html
+++ b/src/main/resources/templates/order-p.html
@@ -36,7 +36,7 @@
             </tr>
             <div th:each="orderDetail, index : ${orderOnProduction.getOrderOnProductionDetails()}">
                 <tr>
-                    <td th:text="${index}"></td>
+                    <td th:text="${index.index + 1}"></td>
                     <td th:text="${orderDetail.product.article}"></td>
                     <td th:text="${orderDetail.amount}"></td>
                 </tr>
