--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
     <form action="/login" method="post">
         <div class="data">
             <input name="username" placeholder="email" required>
-            <input name="password" placeholder="password" required>
+            <input type="password" name="password" placeholder="password" required>
         </div>
         <input class="login_btn" type="submit" value="Войти">
     </form>
