fix edit employee, frontend

--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -17,7 +17,7 @@
     <form action="/employees/add" method="post" th:object="${employee}">
         <div class="data">
             <select name="roleId">
-                <option value="1">Admin</option>
+                <option value="1">Администратор</option>
                 <option value="2">Технолог</option>
                 <option value="3">Диспетчер</option>
                 <option value="4">Мастер сборочного цеха</option>
