--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,4 +1,4 @@
-<div th:fragment="header">
+<div th:fragment="header" class="header">
   <a class="home" href="/home">
     <img src="/img/contoso.svg" alt="Главная"/>
   </a>
