--- a/src/main/resources/templates/materials.html
+++ b/src/main/resources/templates/materials.html
@@ -20,6 +20,9 @@
             <input type="submit" value="" class="search_button">
         </p>
     </form>
+    <a href="/materials">
+        <img src="/img/delete.svg" alt="Отмена"/>
+    </a>
 </div>
 <nuv class="technologist_functions">
     <a class="btn_technologist" href="/materials/add"><p>Создать</p></a>
