--- a/src/main/resources/templates/operations.html
+++ b/src/main/resources/templates/operations.html
@@ -20,6 +20,9 @@
             <input type="submit" value="" class="search_button">
         </p>
     </form>
+    <a href="/operations">
+        <img src="/img/delete.svg" alt="Отмена"/>
+    </a>
 </div>
 <nuv class="technologist_functions">
     <a class="btn_technologist" href="/operations/add"><p>Создать</p></a>
