--- a/src/main/resources/templates/paint_workshop.html
+++ b/src/main/resources/templates/paint_workshop.html
@@ -21,6 +21,9 @@
             <input type="submit" value="" class="search_button">
         </p>
     </form>
+    <a href="/paint">
+        <img src="/img/delete.svg" alt="Отмена"/>
+    </a>
 </div>
 <select class="sort">
     <option>Статус</option>
