--- a/src/main/resources/templates/technologist.html
+++ b/src/main/resources/templates/technologist.html
@@ -21,6 +21,9 @@
             <input type="submit" value="" class="search_button">
         </p>
     </form>
+    <a href="/products">
+        <img src="/img/delete.svg" alt="Отмена"/>
+    </a>
 </div>
 <nuv class="technologist_functions">
     <a class="btn_technologist" href="/products/add"><p>Создать</p></a>
