--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     height: 58px;
-    top: 52px;
+    top: 32px;
     left: 0;
 }
 
@@ -16,7 +16,7 @@
 
 
 .logout{
-    margin-left: 1191px;
+    margin-right: 70px;
     text-decoration: none;
 }
 
