--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -1,16 +1,28 @@
 .search {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     position: absolute;
+    left: 122px;
+    top: 148px;
+
+}
+
+.search form{
+    display: flex;
+    align-items: center;
     width: 608px;
     height: 53px;
-    left: 122px;
-    top: 198px;
     border: 1px solid #6D6DB3;
     border-radius: 31px;
 }
 
-.search__form {
+.search a{
+    margin-top: 5px;
+    margin-left:10px;
+}
+
+.search__form{
     margin-top: 6px;
     margin-left: 32px;
     width: 481px;
