--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -17,17 +17,13 @@
     <form action="/employees/add" method="post" th:object="${employee}">
         <div class="data">
             <select name="roleId">
-                <option value="1">Администратор</option>
-                <option value="2">Технолог</option>
-                <option value="3">Диспетчер</option>
-                <option value="4">Мастер сборочного цеха</option>
-                <option value="5">Мастер покрасочного цеха</option>
-                <option value="6">Мастер упаковочного цеха</option>
+                <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.roleName}"></option>
             </select>
             <input th:field="*{firstName}" placeholder="Имя" required><br/>
             <input th:field="*{lastName}" placeholder="Фамилия" required><br/>
-            <input th:field="*{email}" placeholder="email" required><br/>
-            <input th:field="*{phone}" placeholder="Номер телефона" required><br/>
+            <input th:field="*{email}" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="email" required><br/>
+            <span id="phone" class="input-hint">+375 (xx) xxx xx xx</span>
+            <input th:field="*{phone}" pattern="^\+375 \(\d{2}\) [0-9]{3} [0-9]{2} [0-9]{2}$" placeholder="Номер телефона" required><br/>
         </div>
         <input type="submit" value="Сохранить" class="btn_add_user"/>
     </form>
