--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,21 +19,26 @@
             <input type="submit" value="" class="search_button">
         </p>
     </form>
+    <a href="/employees">
+        <img src="/img/delete.svg" alt="Отмена"/>
+    </a>
 </div>
 <a class="btn_add_user" href="/employees/add"><p>Создать пользователя</p></a>
 <div class="employees">
     <table>
         <tr>
             <th>№</th>
-            <th>email</th>
             <th>Сотрудник</th>
+            <th>email</th>
+            <th>Телефон</th>
             <th>Должность</th>
         </tr>
         <div th:each="employee : ${employees}">
             <tr>
-                <td width="" th:text="${employee.id}"></td>
-                <td th:text="${employee.email}"></td>
+                <td th:text="${employee.id}"></td>
                 <td th:text="${employee.firstName} + ' ' + ${employee.lastName}"></td>
+                <td th:text="${employee.email}"></td>
+                <td th:text="${employee.phone}"></td>
                 <td th:text="${employee.getRoleName()}"></td>
                 <td class="more">
                     <a th:href="'/employees/' + ${employee.id}">
