--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -15,19 +15,13 @@
 <div class="edit_user_form">
     <form th:action="'/employees/' + ${employee.id}" method="post" th:object="${employee}">
         <div class="data">
-            <select name="role">
-                <option th:value="${employee.getRoleName()}" th:text="${employee.getRoleName()}" selected></option>
-                <option th:value="'Администратор'">Администратор</option>
-                <option th:value="'Технолог'">Технолог</option>
-                <option th:value="'Диспетчер'">Диспетчер</option>
-                <option th:value="'Мастер сборочного цеха'">Мастер сборочного цеха</option>
-                <option th:value="'Мастер покрасочного цеха'">Мастер покрасочного цеха</option>
-                <option th:value="'Мастер упаковочного цеха'">Мастер упаковочного цеха</option>
+            <select name="roleId">
+                <option th:each="role:${roles}" th:value="${role.id}" th:text="${role.roleName}" th:selected="${role.roleName == employee.getRoleName()}"></option>
             </select>
             <input th:field="*{firstName}" th:value="${employee.firstName}" placeholder="Имя" required><br/>
             <input th:field="*{lastName}" th:value="${employee.lastName}" placeholder="Фамилия" required><br/>
-            <input th:field="*{email}" th:value="${employee.email}" placeholder="email" required><br/>
-            <input th:field="*{phone}" th:value="${employee.phone}" placeholder="Номер телефона" required><br/>
+            <input th:field="*{email}" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" th:value="${employee.email}" placeholder="email" required><br/>
+            <input th:field="*{phone}" pattern="^\+375 \(\d{2}\) [0-9]{3} [0-9]{2} [0-9]{2}$" th:value="${employee.phone}" required><br/>
         </div>
         <input class="btn_add_user" type="submit" value="Сохранить"/>
     </form>
