--- a/src/main/resources/templates/warehouse_order_history.html
+++ b/src/main/resources/templates/warehouse_order_history.html
@@ -14,11 +14,14 @@
 <body>
 <header th:insert="blocks/header::header"></header>
 <div class="search">
-  <form action="/orders-w" method="post">
+  <form action="/orders-w/search" method="get">
     <p><input type="search" name="id" placeholder="Что вы ищите?" class="search__form">
       <input type="submit" value="" class="search_button">
     </p>
   </form>
+  <a href="/orders-w">
+    <img src="/img/delete.svg" alt="Отмена"/>
+  </a>
 </div>
 <a href="/orders-p">Назад</a>
 <div class="orders">
